force-app/main/default/objects/skilljar__Vilt_Session__c/skilljar__Vilt_Session__c.object-meta.xml
<CustomObject>
    <label>Vilt Session</label>
    <nameField>
        <label>Vilt Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vilt Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>