force-app/main/default/objects/skilljar__Vilt_Session__c/fields/skilljar__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Display_Name__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>