force-app/main/default/objects/skilljar__Vilt_Session__c/fields/skilljar__Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Instructor_Name__c</fullName>
    <label>Instructor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>