force-app/main/default/objects/skilljar__Vilt_Session__c/fields/skilljar__Lesson__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lesson__c</fullName>
    <label>Lesson</label>
    <referenceTo>skilljar__Lesson__c</referenceTo>
    <relationshipLabel>Vilt Sessions</relationshipLabel>
    <relationshipName>Vilt_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>